# LegiFlow

./: .env  app.py  client.py  juri_flow.py  pyproject.toml
backend/: juri_flow.py  prompts.yaml
frontend/: app.py
src/legiflow/backend/: client.py  juri_flow.py  process_files.py
src/legiflow/frontend/: app.py
