[project]
name = "tuto-4all"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "pydantic>=2.11.7",
    "pylegifrance>=1.2.1b1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
